force-app/main/default/objects/Secondary_Debit_Note__c/Secondary_Debit_Note__c.object-meta.xml
<CustomObject>
    <label>Secondary Debit Note</label>
    <nameField>
        <label>Secondary Debit Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secondary Debit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>