force-app/main/default/objects/Secondary_Debit_Note__c/fields/Aging_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Aging_in_Days__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging_in_Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>