force-app/main/default/objects/Secondary_Debit_Note__c/fields/Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Note_Date__c</fullName>
    <label>Note Date</label>
    <type>Date</type>
</CustomField>