force-app/main/default/objects/Secondary_Debit_Note__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <label>Paid Amount</label>
    <summarizedField>Secondary_Receipt_Debit_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Secondary_Receipt_Debit_Item__c.Secondary_Debit_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>