force-app/main/default/objects/Secondary_Debit_Note__c/fields/Secondary_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Invoice</label>
    <referenceTo>Secondary_Invoice__c</referenceTo>
    <relationshipLabel>Secondary Debit Notes</relationshipLabel>
    <relationshipName>Secondary_Debit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>