force-app/main/default/objects/Secondary_Debit_Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Distributor__c</columns>
    <columns>Note_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>