force-app/main/default/objects/Secondary_Debit_Note__c/listViews/Draft.listView-meta.xml
<ListView>
    <fullName>Draft</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Note_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Pending_Amount__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft</label>
</ListView>